--- a/Data101_(Chapter2).ipynb
+++ b/Data101_(Chapter2).ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Data101 (Chapter2).ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqwyJiNNgtpS0SVRuhOiRU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +56,7 @@
       "source": [
         "import pandas # วิธีเรียกใช้ package คือ import ตามด้วยชื่อ package"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -68,7 +67,7 @@
       "source": [
         "import pandas as pd # เหมือนกันกับข้างบนแต่ว่า ตั้งชื่อให้ package ที่โหลดมาใหม่ว่า pd"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -88,7 +87,7 @@
       "source": [
         "data_df = pd.read_csv( 'data.csv' )"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +103,7 @@
       "source": [
         "data_df"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +183,7 @@
         "data_df2 = pandas.read_csv( 'data.csv' )\n",
         "data_df2"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -287,7 +286,7 @@
         "variable_b = 'abcde' # ' เรียกว่า quote\n",
         "variable_c = variable_a "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +301,7 @@
       "source": [
         "variable_a"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -331,7 +330,7 @@
       "source": [
         "variable_b"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -362,7 +361,7 @@
       "source": [
         "variable_c"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +391,7 @@
         "#ชื่อห้ามมีเว้นวรรค\n",
         "variable a = 6 "
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -419,7 +418,7 @@
         "ตัวแปร = 3 \n",
         "ตัวแปร"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -451,7 +450,7 @@
         "print(v_a)\n",
         "print(V_a)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +478,7 @@
         "print(v_a)\n",
         "print(v_a)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,7 +504,7 @@
         "#ห้ามใช้ตัวเลขเป็นตัวหน้า\n",
         "2 = 1"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -531,7 +530,7 @@
         "#ห้ามใช้ตัวเลขเป็นตัวหน้า\n",
         "2ab = 1"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -552,7 +551,7 @@
         "#ห้ามใช้ตัวเลขเป็นตัวหน้า\n",
         "variable1 = 1"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -567,7 +566,7 @@
       "source": [
         "print(variable1)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -590,7 +589,7 @@
         "variable_d = -41.2\n",
         "variable_4 = \"KKU\" # \" เรียกว่า double quote"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -606,7 +605,7 @@
         "variable_x = variable_c + variable_d\n",
         "print(variable_x)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,7 +629,7 @@
       "source": [
         "variable_a + variable_b"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -657,7 +656,7 @@
       "source": [
         "print(variable_b + variable_4)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +689,7 @@
         "print(variable_x)\n",
         "print(int(variable_x))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -715,7 +714,7 @@
         "V_X = str(variable_x)\n",
         "print(V_X)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,7 +738,7 @@
       "source": [
         "V_X + variable_a # เพราะเราทำให้ V_X เป็น string เลยทำให้บวกกับตัวเลขไม่ได้"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -767,7 +766,7 @@
       "source": [
         "variable_a + V_X # ก็เหมือนกัน แต่ว่าตัวโปรแกรมจะอ่านค่าตัวข้างหน้าก่อนว่า อันนี้เอาไปบวกกับอะไร"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -795,7 +794,7 @@
       "source": [
         "V_X"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -826,7 +825,7 @@
       "source": [
         "float(V_X)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -861,7 +860,7 @@
         "list_a = [1,2,0.2,'abs'] # [] square brackets\n",
         "list_b = [2,'xyz',list_a,[1,2,0.0]]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -876,7 +875,7 @@
       "source": [
         "list_a"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -904,7 +903,7 @@
       "source": [
         "list_b"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +931,7 @@
       "source": [
         "len(list_b)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -960,7 +959,7 @@
       "source": [
         "list_b[3]"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -988,7 +987,7 @@
       "source": [
         "list_b[3][1]"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1021,7 +1020,7 @@
       "source": [
         "a = 'Stat KKU'"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1037,7 +1036,7 @@
       "source": [
         "a[4] # ตัวที่ 4 เป็นช่องว่าง"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1074,7 +1073,7 @@
         "list_c = list() #แบบที่ 1\n",
         "list_d = [] #แบบที่ 2"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1089,7 +1088,7 @@
       "source": [
         "list_c"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1117,7 +1116,7 @@
       "source": [
         "list_d"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1150,7 +1149,7 @@
       "source": [
         "list_d.append('a')"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1165,7 +1164,7 @@
       "source": [
         "list_d"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1189,7 +1188,7 @@
       "source": [
         "list_d.append(56)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1204,7 +1203,7 @@
       "source": [
         "list_d"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1248,7 +1247,7 @@
       "source": [
         "list_b"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1276,7 +1275,7 @@
       "source": [
         "list_b[-1]"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1320,7 +1319,7 @@
       "source": [
         "list_ex = [1,2,3,5,6,8,-1,20,50,0]"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1335,7 +1334,7 @@
       "source": [
         "list_ex[1:6] "
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1363,7 +1362,7 @@
       "source": [
         "list_ex[4:]"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1391,7 +1390,7 @@
       "source": [
         "list_ex[:6]"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1428,7 +1427,7 @@
       "source": [
         "list_ex[::2]"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1456,7 +1455,7 @@
       "source": [
         "list_ex[::-1] # การกลับ list"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1485,7 +1484,7 @@
       "source": [
         "a"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1517,7 +1516,7 @@
       "source": [
         "a[5::]"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1549,7 +1548,7 @@
       "source": [
         "a[5:8]"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1581,7 +1580,7 @@
       "source": [
         "a[-3::1]"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1613,7 +1612,7 @@
       "source": [
         "a[-3::]"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1654,7 +1653,7 @@
         "print(list_a)\n",
         "print(list_b)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1678,7 +1677,7 @@
       "source": [
         "list_a + list_b"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1739,7 +1738,7 @@
       "source": [
         "f'ตัวแปร list_a มีค่าคือ {list_a}'"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1797,7 +1796,7 @@
         "\n",
         "  print('x')"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1825,7 +1824,7 @@
         "for x in [1,2,3,4,5]:\n",
         "  print(f'ค่าตัวแปร x คือ {x} และ x+2={x+2}')"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1854,7 +1853,7 @@
         "for x in list5:\n",
         "   print(f'ค่าตัวแปร x คือ {x} และ x+2={x+2}')"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1881,7 +1880,7 @@
       "source": [
         "list(range(10))"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1910,7 +1909,7 @@
         "for i in range(2,7):\n",
         "  print(i)"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1938,7 +1937,7 @@
         "for i in range(2,7,2):\n",
         "  print(i)"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1964,7 +1963,7 @@
         "for i in range(5):\n",
         "  print('hahaha')"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1994,7 +1993,7 @@
         "  x = i+3\n",
         "  print(f'i={i} x={x}')"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2040,7 +2039,7 @@
         "        print(f'i = {i} j = {j} i+j = {i+j}')\n",
         "    print('end j loop')"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2077,20 +2076,98 @@
         "id": "3FiD1n4cHc2x"
       },
       "source": [
-        "## Condition\n",
-        "## Function"
+        "## Condition\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jYBEjQTqHHyn"
+        "id": "jYBEjQTqHHyn",
+        "outputId": "842c0952-a86c-43c6-b395-6a6b30b8ab1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "password = '12345'\n",
+        "\n",
+        "input_pass = '123sf'\n",
+        "if input_pass == password:\n",
+        "    print('Welcome!')\n",
+        "elif len(input_pass) > len(password):\n",
+        "    print('Too long, try again!')\n",
+        "elif len(input_pass) < len(password):\n",
+        "    print('Too short , try again!')\n",
+        "else:\n",
+        "    print('Wrong password, tey again!')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Wrong password, tey again!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OkG84hRENqOG"
+      },
+      "source": [
+        "Quiz 1 หา min"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wNodyBPkNtEr"
+      },
+      "source": [
+        "list_ex = [1,5,9,-19,-2,0] #หาค่าน้อยที่สุดใน list_ex โดยไม่ใช้ function min (commit ก่อน 10.30 :Quiz1)"
+      ],
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CwRH_E4iN4yp",
+        "outputId": "d04577c8-7c0f-4949-f02a-4455991bd98f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "list_ex[3:4:2]"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[-19]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xOWggRhCOzsL"
+      },
+      "source": [
+        "## Function"
+      ]
     }
   ]
 }
