--- a/Data101_(Chapter2).ipynb
+++ b/Data101_(Chapter2).ipynb
@@ -2083,10 +2083,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jYBEjQTqHHyn",
-        "outputId": "842c0952-a86c-43c6-b395-6a6b30b8ab1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "842c0952-a86c-43c6-b395-6a6b30b8ab1a"
       },
       "source": [
         "password = '12345'\n",
@@ -2135,29 +2135,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CwRH_E4iN4yp",
-        "outputId": "d04577c8-7c0f-4949-f02a-4455991bd98f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CwRH_E4iN4yp",
+        "outputId": "2d99ee29-a066-44eb-f5de-f73f95ab8000"
       },
       "source": [
-        "list_ex[3:4:2]"
+        "list_ex[-3]"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[-19]"
+              "-19"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vsubVG6AQVF0"
+      },
+      "source": [
+        "Quiz"
       ]
     },
     {
