--- a/Data101_(Chapter2).ipynb
+++ b/Data101_(Chapter2).ipynb
@@ -2161,13 +2161,110 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "avsgZ0g8Sq6z",
+        "outputId": "07a488f2-328a-4b03-9ddd-2edf2bed25cc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "min = 10000000  #กำหนดให้มีค่าเยอะๆไว้ก่อน\n",
+        "for i in list_ex:\n",
+        "    if i < min:\n",
+        "      min = i\n",
+        "print(min)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-19\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZNNkUXHAUKxp",
+        "outputId": "25bdaf38-5391-4c93-e2f9-ea0f22de3e4d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "min = 10000000  #กำหนดให้มีค่าเยอะๆไว้ก่อน\n",
+        "print(list_ex)\n",
+        "for i in list_ex:\n",
+        "    print(f'now i = {i}, min = {min}')\n",
+        "    print('start condition')\n",
+        "    if i < min:\n",
+        "      print(f'i < min, update min -> {i}')\n",
+        "      min = i\n",
+        "    else:\n",
+        "      print('i >= min, not update')\n",
+        "    print('end condition, go to next i')\n",
+        "print(min)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 5, 9, -19, -2, 0]\n",
+            "now i = 1, min = 10000000\n",
+            "start condition\n",
+            "i < min, update min -> 1\n",
+            "end condition, go to next i\n",
+            "now i = 5, min = 1\n",
+            "start condition\n",
+            "i >= min, not update\n",
+            "end condition, go to next i\n",
+            "now i = 9, min = 1\n",
+            "start condition\n",
+            "i >= min, not update\n",
+            "end condition, go to next i\n",
+            "now i = -19, min = 1\n",
+            "start condition\n",
+            "i < min, update min -> -19\n",
+            "end condition, go to next i\n",
+            "now i = -2, min = -19\n",
+            "start condition\n",
+            "i >= min, not update\n",
+            "end condition, go to next i\n",
+            "now i = 0, min = -19\n",
+            "start condition\n",
+            "i >= min, not update\n",
+            "end condition, go to next i\n",
+            "-19\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "vsubVG6AQVF0"
       },
       "source": [
-        "Quiz"
+        "HW ตัดเกรด "
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aK0XONQGQ0sS"
+      },
+      "source": [
+        "score = [49,65,70,95,82,55,89,20,77,77,81,59,10] #ตัดเกรดคะแนนใน list_score (ใช้ if กับ for)"
+      ],
+      "execution_count": 11,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
