--- a/Data101_(Chapter2).ipynb
+++ b/Data101_(Chapter2).ipynb
@@ -2080,6 +2080,123 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "one1x48xfUlf"
+      },
+      "source": [
+        "```python\n",
+        "if เงื่อนไขที่จะตรวจสอบ (โดยใช้สัญลักษณ์ ==,!=,<,>,<=,>=):\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงาน 1\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงาน 2\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2xRZrbAgfJV6",
+        "outputId": "914f70ac-bfda-41d2-92f1-ee23b35c7301",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "stringx = 'sadfasdfsadfweirjwersdfspadofgj'\n",
+        "\n",
+        "if len(stringx) > 30:\n",
+        "    print(f'{stringx} is longer than 30 characters')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "sadfasdfsadfweirjwersdfspadofgj is longer than 30 characters\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hlsqxqINfRkW"
+      },
+      "source": [
+        "stringx = 'sadfasdfsadfweirjwersdfspadofgj'\n",
+        "\n",
+        "if len(stringx) > 100:\n",
+        "    print(f'{stringx} is longer than 30 characters')"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "oOGuiabUfWJq"
+      },
+      "source": [
+        "```python\n",
+        "if เงื่อนไขที่จะตรวจสอบ (โดยใช้สัญลักษณ์ ==,!=,<,>,<=,>=):\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงานที่ 1\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงานที่ 2\n",
+        "else: #ตรวจสอบเงื่อนไขข้างบนแล้วไม่เป็นจริง\n",
+        "    ทำงานที่ X\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZmNkeAMEfXtd",
+        "outputId": "5d72b75c-e550-49d7-a00f-1ee9f0ea9db2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "stringx = 'sadfasdfsadfweirjwersdfspadofgj'\n",
+        "\n",
+        "if len(stringx) > 100:\n",
+        "    print(f'{stringx} is longer than 30 characters')\n",
+        "else:\n",
+        "    print(f'{stringx} in {len(stringx)} characters long')"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "sadfasdfsadfweirjwersdfspadofgj in 31 characters long\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ku6rEfB8fe6Q"
+      },
+      "source": [
+        "```python\n",
+        "if เงื่อนไขที่จะตรวจสอบ (โดยใช้สัญลักษณ์ ==,!=,<,>,<=,>=):\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงานที่ 1\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงานที่ 2\n",
+        "elif เงื่อนไขที่จะตรวจสอบต่อไปถ้าเงื่อนไขข้างบนไม่เป็นจริง:\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงานที่ a1\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงานที่ a2\n",
+        "elif เงื่อนไขที่จะตรวจสอบต่อไปถ้าเงื่อนไขข้างบนไม่เป็นจริง:\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงานที่ b1\n",
+        "    ถ้าเงื่อนไขเป็นจริง ทำงานที่ b2\n",
+        "else: #ตรวจสอบเงื่อนไขข้างบนแล้วไม่เป็นจริง\n",
+        "    ทำงานที่ X\n",
+        "```"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "jYBEjQTqHHyn",
@@ -2101,7 +2218,7 @@
         "else:\n",
         "    print('Wrong password, tey again!')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2129,7 +2246,7 @@
       "source": [
         "list_ex = [1,5,9,-19,-2,0] #หาค่าน้อยที่สุดใน list_ex โดยไม่ใช้ function min (commit ก่อน 10.30 :Quiz1)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2144,7 +2261,7 @@
       "source": [
         "list_ex[-3]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2164,10 +2281,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "avsgZ0g8Sq6z",
-        "outputId": "07a488f2-328a-4b03-9ddd-2edf2bed25cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "07a488f2-328a-4b03-9ddd-2edf2bed25cc"
       },
       "source": [
         "min = 10000000  #กำหนดให้มีค่าเยอะๆไว้ก่อน\n",
@@ -2176,7 +2293,7 @@
         "      min = i\n",
         "print(min)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2191,10 +2308,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZNNkUXHAUKxp",
-        "outputId": "25bdaf38-5391-4c93-e2f9-ea0f22de3e4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "25bdaf38-5391-4c93-e2f9-ea0f22de3e4d"
       },
       "source": [
         "min = 10000000  #กำหนดให้มีค่าเยอะๆไว้ก่อน\n",
@@ -2210,7 +2327,7 @@
         "    print('end condition, go to next i')\n",
         "print(min)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2252,7 +2369,7 @@
         "id": "vsubVG6AQVF0"
       },
       "source": [
-        "HW ตัดเกรด "
+        "HW3 ตัดเกรด "
       ]
     },
     {
@@ -2263,8 +2380,86 @@
       "source": [
         "score = [49,65,70,95,82,55,89,20,77,77,81,59,10] #ตัดเกรดคะแนนใน list_score (ใช้ if กับ for)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-p9xzboNfjKV"
+      },
+      "source": [
+        "list_score = [49,65,70,95,82,55,89,20,77,77,81,59,10]"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MvuPMIkJgJlx",
+        "outputId": "39b1d6c2-911a-42c2-fef8-ce0f2914418f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(list_score)\n",
+        "for i in list_score:\n",
+        "    print(f'score = {i}')\n",
+        "    if i < 50:\n",
+        "      print('Grade F')\n",
+        "    elif 50 <= i <= 54:\n",
+        "      print('Grade D')\n",
+        "    elif 55 <= i <= 59:\n",
+        "      print('Grade D+')\n",
+        "    elif 60 <= i <= 64:\n",
+        "      print('Grade C')\n",
+        "    elif 65 <= i <= 69:\n",
+        "      print('Grade C+')\n",
+        "    elif 70 <= i <= 74:\n",
+        "      print('Grade B')\n",
+        "    elif 75 <= i <= 79:\n",
+        "      print('Grade B+')\n",
+        "    elif  i > 80:\n",
+        "      print('Grade A')"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[49, 65, 70, 95, 82, 55, 89, 20, 77, 77, 81, 59, 10]\n",
+            "score = 49\n",
+            "Grade F\n",
+            "score = 65\n",
+            "Grade C+\n",
+            "score = 70\n",
+            "Grade B\n",
+            "score = 95\n",
+            "Grade A\n",
+            "score = 82\n",
+            "Grade A\n",
+            "score = 55\n",
+            "Grade D+\n",
+            "score = 89\n",
+            "Grade A\n",
+            "score = 20\n",
+            "Grade F\n",
+            "score = 77\n",
+            "Grade B+\n",
+            "score = 77\n",
+            "Grade B+\n",
+            "score = 81\n",
+            "Grade A\n",
+            "score = 59\n",
+            "Grade D+\n",
+            "score = 10\n",
+            "Grade F\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
